# golioth-firmware-sdk

examples/linux/: Config.in  Dockerfile  README.md  boot-script.txt  build-in-docker.sh  external.desc
examples/linux/board/qemu/aarch64-golioth/: linux.fragment  post-build.sh
examples/linux/board/qemu/x86_64-golioth/: linux.fragment  post-build.sh
examples/linux/buildroot/: .gitignore  Config.in  Dockerfile  OTA-WORKFLOW.md  README.md  build-in-docker.sh  create-swu.sh  external.mk  run-qemu-new.sh
examples/linux/buildroot/board/qemu/aarch64-golioth/: linux.fragment  post-image.sh  uboot-env-override.h  uboot-env.txt  uboot.env  uboot.fragment
examples/linux/buildroot/configs/: qemu_aarch64_golioth_defconfig  qemu_x86_64_golioth_defconfig
examples/linux/buildroot/package/golioth-app/: Config.in  golioth-app.mk
examples/linux/buildroot/package/golioth-app/src/: CMakeLists.txt  fw_update_swupdate.c  golioth_app.c  golioth_app.h  main.c
examples/linux/buildroot/package/golioth-basics/: golioth-basics.mk
examples/linux/buildroot/package/golioth-firmware-sdk/: Config.in  golioth-firmware-sdk.mk
examples/linux/buildroot/scripts/: run_qemu.sh  run_qemu_aarch64.sh
examples/linux/buildroot/swu-templates/: post-install.sh  pre-install.sh  sw-description-ab.template  sw-description-multi.template
examples/linux/configs/: qemu_aarch64_golioth_defconfig
examples/linux/package/golioth-basics/: Config.in
examples/linux/scripts/: run_qemu_aarch64.sh
port/linux/: fw_update_linux.c  golioth_sys_linux.c
port/linux/golioth_sdk/: CMakeLists.txt
(+16 files in other folders)
